--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
 
     <style>
-      *, *:after, *:before {
-        -webkit-box-sizing: border-box;
-           -moz-box-sizing: border-box;
-                box-sizing: border-box;
-      }
       body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         text-align: center;
-        font-size: 0;
-        background-color: #f1f1ec;
+        height: 100vh;
         font-family: 'Shadows Into Light Two', cursive;
       }
       svg {
@@ -26,53 +23,16 @@
         height: 20vh;
         margin: 30vh auto 5vh;
       }
-      #square {
-        stroke-dasharray: 1000;
-        stroke-dashoffset: 1000;
-        animation-duration: 4s;
-        animation-timing-function: ease-in;
-        animation-delay: 1s;
-        animation-direction: alternate;
-        animation-fill-mode: forwards;
-        animation-iteration-count: infinite;
-        animation-play-state: running;
-        animation-name: squareDrawing;
-      }
       .announce {
-        text-align: center;
         font-size: 38px;
         line-height: 1.4;
+        margin: 0 auto;
         color: #445c6e;
         text-shadow:  0 1px 0 #fff;
-      }
-
-      @keyframes squareDrawing {
-        to {
-          stroke-dashoffset: 0;
-        }
       }
     </style>
   </head>
   <body>
-    <div class="logo-wrapper"> <!-- start .logo-wrapper -->
-      <svg id="mrFlosterLogo" xmlns="http://www.w3.org/2000/svg" viewBox="5 5 260 90">
-        <title>mr.floster__logo</title>
-        <path id="bigF" fill="#09c" fill-opacity=".2" d="M10,10H55V25H25V40H45V55H25V90H10Z"/>
-        <g fill="#09c" id="mrFloster">
-          <path id="r" d="M249,86V43.6h5.3v5.8a13.3,13.3,0,0,1,4.5-4.8,10.1,10.1,0,0,1,5.2-1.5h.9V49a6.8,6.8,0,0,0-2.6-.5q-5.1,0-8.1,4.9V86Z"/>
-          <path id="e" d="M231.4,86c-3.4,0-6.8-1-8.8-3.9s-2.3-6.3-2.5-9.5-.1-8.7-.1-13,0-13.8,5.9-16.4c3.4-1.5,8.3-1.5,11.6.5s4.3,6.5,4.6,10.2a85.7,85.7,0,0,1,.2,8.7c0,.6.1.8-.3,1a6.1,6.1,0,0,1-1.8,0H227.1c-.3,0-1.3-.2-1.6,0s-.1.7-.1,1.1c0,2,0,4,0,6s-.1,7.5,2.1,9.8,7,1.8,8.6-1,.7-5.4,1-8.1c.1-.9.3-.6,1.3-.6a25.8,25.8,0,0,1,3.4,0h.5c.2.2,0,1.2,0,1.4A28.9,28.9,0,0,1,242,77c-.5,3.3-2,6.5-5.1,8A12.9,12.9,0,0,1,231.4,86Zm-6-25.5h10.4c.6,0,1.2.2,1.4-.2s0-1.5,0-1.9,0-1.1,0-1.6c0-2.5,0-5.3-1-7.6-1.7-4.1-8.4-3.6-9.9.4S225.3,56.9,225.3,60.5Z"/>
-          <path id="t" d="M210.7,86q-4.3,0-5.9-2.4t-1.7-7v-30H198V43.1h5.1V30h5.3V43.1h7v3.6h-7V76.2a9.1,9.1,0,0,0,.7,4.4q.7,1.2,3,1.2l3-.3v4A23.4,23.4,0,0,1,210.7,86Z"/>
-          <path id="s" d="M184.4,86a10.9,10.9,0,0,1-10.6-7.9,10.7,10.7,0,0,1-.8-3.7c.1-.7.2-.6,1-.8l3.5-1.1c.3,3,1,6.9,3.8,8.6s7.1.9,8.6-2.1c2.8-5.6-2.9-10.3-6.6-13.5s-8.7-6.6-9.3-12.1c-.4-3.4.5-6.9,3.3-9.1a11.5,11.5,0,0,1,9.7-1.6c3.7,1,5.9,4.4,6.6,8,.1.5.6,2.4.3,2.8s-.9.3-1.1.4l-2.6.9c-.1-2.2-.5-4.8-2-6.6a5.7,5.7,0,0,0-6.4-1.3c-2.5,1-3.3,3.6-2.9,6.1s1.8,3.9,3.5,5.4c5.4,4.9,13.1,10,12.9,18.1C195.1,82.4,190.4,86,184.4,86Z"/>
-          <path id="o" d="M161.6,85a14.7,14.7,0,0,1-10.9,0,7.8,7.8,0,0,1-3.5-3.1,15,15,0,0,1-1.8-5A37.9,37.9,0,0,1,145,70V58.3q0-8.1,2.5-12t8.7-3.9q6.3,0,8.7,3.9t2.5,12V70a37.9,37.9,0,0,1-.5,6.9,15,15,0,0,1-1.8,5A7.8,7.8,0,0,1,161.6,85Zm-5.4-3a5.6,5.6,0,0,0,2.7-.6,4.8,4.8,0,0,0,1.7-1.5,6.7,6.7,0,0,0,.9-2.5,24,24,0,0,0,.4-3.1q.1-1.5.1-3.9V58q0-2.4-.1-3.9a24,24,0,0,0-.4-3.1,6.7,6.7,0,0,0-.9-2.5,4.8,4.8,0,0,0-1.7-1.5,5.6,5.6,0,0,0-2.7-.6,6.9,6.9,0,0,0-2.3.4,3.6,3.6,0,0,0-1.6,1.2,7.5,7.5,0,0,0-1,1.7,9.2,9.2,0,0,0-.6,2.4q-.2,1.5-.2,2.8t-.1,3.3V70.3q0,2,.1,3.3t.2,2.8a9.2,9.2,0,0,0,.6,2.4,7.5,7.5,0,0,0,1,1.7,3.6,3.6,0,0,0,1.6,1.2A6.9,6.9,0,0,0,156.2,82Z"/>
-          <path id="l" d="M133,86V26.7h5.4V86Z"/>
-          <path id="F" d="M105,86V26.7h21.2v4.2H110.6V53.2h13v4.2h-13V86Z"/>
-          <path id="mr_dot" d="M82.2,79.1c3.4-.4,1.2,4.7-1.1,4.9s-1.9-1.5-1.8-2.9S80.4,79.1,82.2,79.1Z"/>
-          <path id="mr_r" d="M62.5,76.7c2.1-3.8,3.5-7.7,6.8-10.7,1.6-1.5,3.6-2.9,5.8-2.4s4.6,2.7,2.8,4.5-3.1-1-4.6-.9-3.3,2.3-4.2,3.4a25.9,25.9,0,0,0-4.5,7.6c-.6,1.6-.6,5.6-1.7,6.7-3.6,3.4-3.7-4-3.7-5.9,0-3.9-.2-8.5.9-12.2.4-1.5,1.6-4.5,3.7-2.7s-.3,3.8-.5,5A38.8,38.8,0,0,0,62.5,76.7Z"/>
-          <path id="mr_m" d="M31.4,68.8c-.9,0-1.7,1.2-2.1,1.8a44.4,44.4,0,0,0-3.5,5.2c-1.4,2.3-2.7,4.8-4.1,7.1a3.1,3.1,0,0,1-1,1.3c-.6.4-2.2.9-2.8.4a3.1,3.1,0,0,1-.7-1.9,20.2,20.2,0,0,1-.2-3.6,53.9,53.9,0,0,1,.6-6c.4-2.7,1-5.4,1.1-8.1,0-.9,0-1.8,1.2-1.9a2,2,0,0,1,1.9,1.4c.8,2,0,4.9-.3,7a48.8,48.8,0,0,0-1,6.8A25.5,25.5,0,0,0,24.2,73a55.6,55.6,0,0,1,3.9-5.8c1.1-1.4,3-3.2,4.9-2.7s2,2.5,2.1,3.9.2,4.9.5,7.3c0,.3.2,1.9.7,1.9s.7-.6.9-.8A37.9,37.9,0,0,0,40.5,71c1-2,2.3-4.5,4.3-5.8s4.2-.7,5,1.6.8,5.1,1.2,7.7.6,4.9,2.6,6.2,1.7.9,1.2,2a3.2,3.2,0,0,1-2.8,1.6c-1.9-.2-3-2.3-3.4-3.9a39.8,39.8,0,0,1-1.1-6.9c-.1-1-.2-5.4-2-4.2s-2.4,3.1-3.2,4.5-2.6,5.2-4.2,7.6c-.5.8-1.2,1.8-2.2,2.1s-2.4-.8-2.8-2-.4-4.7-.6-6.9a34.6,34.6,0,0,0-.4-3.6A4.5,4.5,0,0,0,31.4,68.8Z" />
-        </g>
-        <rect id="square" x="7" y="7" width="86" height="86" fill="none" stroke="#09c" stroke-width="4" />
-      </svg>
-    </div> <!-- end .logo-wrapper -->
-    <p class="announce">Comming soon...</p>
+    <p class="announce">Mr. Floster will comming soon...</p>
   </body>
 </html>
