fix body scrolling

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
     <style>
       body {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        text-align: center;
+        align-items: center;
         height: 100vh;
+        margin: 0;
         font-family: 'Shadows Into Light Two', cursive;
-      }
-      svg {
-        width: auto;
-        height: 20vh;
-        margin: 30vh auto 5vh;
       }
       .announce {
         font-size: 38px;
