new version of Hardova Rosa

--- a/hr/index.html
+++ b/hr/index.html
@@ -2,7 +2,7 @@
 <html lang="ua">
   <head>
     <meta charset="utf-8">
-    <title>mrf_bootstrap_custom</title>
+    <title>Гардова роса</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#fff">
@@ -29,7 +29,9 @@
     <!-- start .navbar -->
     <nav class="navbar navbar-dark navbar-expand-lg col">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Гардова роса</a>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/hr-logo.png" alt="Логотип Гардова роса">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,7 +142,7 @@
       <!-- start .section.about.price -->
       <div class="container">
         <header class="section__header">
-          <h2 class="section__title">Ціни</h2>
+          <h2 class="section__title">Локації та ціни</h2>
         </header>
         <div class="about__body">
           <div class="accordion" id="accordionExample">
@@ -194,6 +196,106 @@
       </div>
     </div>
     <!-- end .section.about.price -->
+    <div class="section about partners">
+      <!-- start .section.about.partners -->
+      <div class="container">
+        <header class="section__header">
+          <h2 class="section__title text-center">Стати партнером</h2>
+        </header>
+        <div class="about__body">
+          <div class="text-center">
+            <h4>Мета</h4>
+            <p>Метою даного проекту є забезпечення населення України якісною очищеною питною водою. Даний проект є комерційним і передбачає отримання прибутку всіма субьектами господарювання залученими у ньому.</p>
+            <br>
+            <h4>Бачення</h4>
+            <p>Для досягнення мети ми створюємо разгалужену мережу пристроїв по очищенню, розливу та продажу води здійснюємо її комерційну експлуатації, технічне обслуговування та заходи по залученню спожівачів.</p>
+            <br> </div>
+          <a class="btn btn-block btn-light text-left collapsed" type="button" data-toggle="collapse" href="#forPartners01" aria-expanded="false" aria-controls="forPartners01">
+            <span>▶</span> Ми </a>
+          <div class="collapse" id="forPartners01">
+            <div class="card card-body">
+              <strong>Франчайзер</strong>
+              <p>Власники патенту, торгової марки та моделі бізнесу за допомоги яких здійснюється діяльність.</p>
+            </div>
+          </div>
+          <a class="btn btn-block btn-light text-left collapsed" type="button" data-toggle="collapse" href="#forPartners02" aria-expanded="false" aria-controls="forPartners02">
+            <span>▶</span> НАШІ Партнери або Ділери </a>
+          <div class="collapse" id="forPartners02">
+            <div class="card card-body">
+              <p>
+                <strong>Тобто особи які можуть бути зацікавленні:</strong>
+              </p>
+              <ul>
+                <li>Будівельні компанії які на етапі будівництва бажають закласти в проекти будинків мережу та устаткування для очистки, розливу та продажу питної води;</li>
+                <li>ОСББ, ОК, ЖЕУ, ЖЕП, а також власники торговельно-розважальних та бізнес центрів які проводять комерційну експлуатацію споруд;</li>
+                <li>Приватні особи(мешканці багатоквартирних будинків), активні люди які мають вільні кошти та бажання вести бізнес у даному сегменті послуг.</li>
+              </ul>
+              <p>Іншим словом
+                <strong>Франчайзі.</strong>
+              </p>
+              <br>
+              <strong>Партнер або Ділер</strong>
+              <p>Фізична або юридична особа, яка за власний кошт побудувала сигмент мережі та за договором франчайзингу здійснює його комерційну експлуатацію, технічне обслуговування мережі, проводить заходи по залученню клієнтів та реалізації карток.</p>
+              <br>
+              <strong>Інвестор</strong>
+              <p>Фізична або юридична особа, яка за власний чи залучений кошт побудувала сигмент мережі та за договором франчайзингу не здійснює його експлуатацію, а лише отримує відсоток винагороди від його комерційної експлуатації іншим суб'єктом господарювання.</p>
+              <br>
+              <strong>Агент</strong>
+              <p>Фізична або юридична особа, яка за договором з Партнером/Ділером проводить виключно заходи по залученню клієнтів та реалізації карток.</p>
+            </div>
+          </div>
+          <a class="btn btn-block btn-light text-left collapsed" type="button" data-toggle="collapse" href="#forPartners03" aria-expanded="false" aria-controls="forPartners03">
+            <span>▶</span> НАШІ Клієнти або споживачі послуги </a>
+          <div class="collapse" id="forPartners03">
+            <div class="card card-body">
+              <ul>
+                <li>Фізичні особи які мешкають в багатоквартирних житлових будинках;</li>
+                <li>Юридичні особи та приватні підприємці які мають у власності або винаймають офісні приміщення в багатоквартирних житлових будинках, торговельно-розважальних та бізнес центрах .</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end .section.about.partners -->
+    <div class="section contact-us">
+      <div class="container">
+        <h4 class="text-center">Заробляйте разом з нами! Ми пропонуємо вам зрозумілий основний та додатковий прибуток.</h4>
+        <div class="alert alert-primary text-center h5">Надішліть нам запит поштою:
+          <a href="info-gr@i.ua">info-gr@i.ua</a>
+        </div>
+        <h5 class="text-center">Надішліть заявку і ми зв'яжемося з Вами для обговорення деталей співпраці.</h5>
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="contactName">Ім'я</label>
+              <input type="text" class="form-control" id="contactName"> </div>
+            <div class="form-group col-md-6">
+              <label for="contactCity">Місто</label>
+              <input type="text" class="form-control" id="contactCity"> </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <div class="form-group">
+                <label for="contactPhone">Контактний телефон</label>
+                <input type="phone" class="form-control" id="contactPhone"> </div>
+              <div class="form-group">
+                <label for="contactEmail">E-mail</label>
+                <input type="email" class="form-control" id="contactEmail"> </div>
+            </div>
+            <div class="col-12 col-sm-6">
+              <div class="form-group">
+                <label for="contactMessage">Повідомлення</label>
+                <textarea class="form-control" id="contactMessage" rows="4" placeholder="Коротко опишіть Ваші можливості: вид бізнесу, зону роботи з клієнтом, персонал, розміщення"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="text-right">
+            <button type="submit" class="btn btn-primary">Надіслати заявку</button>
+          </div>
+        </form>
+      </div>
+    </div>
     <!-- END content -->
     <footer class="main-footer">
       <div class="container"> Гардова роса&copy2018 </div>
