--- a/hr/restore.html
+++ b/hr/restore.html
@@ -2,7 +2,7 @@
 <html lang="ua">
   <head>
     <meta charset="utf-8">
-    <title>mrf_bootstrap_custom</title>
+    <title>Гардова роса</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#fff">
@@ -29,7 +29,9 @@
     <!-- start .navbar -->
     <nav class="navbar navbar-dark navbar-expand-lg col">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Гардова роса</a>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/hr-logo.png" alt="Логотип Гардова роса">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
