--- a/hr/registration.html
+++ b/hr/registration.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-custom.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/fontawesome-custom.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/app.css" /> </head>
-  <body>
+  <body data-spy="scroll" data-target="#mainNav" data-offset="0">
     <div class="visuallyhidden">
       <svg xmlns="http://www.w3.org/2000/svg">
         <symbol id="icon-filters_01" viewBox="0 0 512 512">
@@ -27,7 +27,7 @@
       </svg>
     </div>
     <!-- start .navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg col">
+    <nav class="navbar navbar-dark navbar-expand-lg col" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="images/hr-logo.png" alt="Логотип Гардова роса">
@@ -43,19 +43,19 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Про воду</a>
+              <a class="nav-link" href="#about">Про воду</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Про проект</a>
+              <a class="nav-link" href="#product">Про проект</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ціни</a>
+              <a class="nav-link" href="#price">Локації та тарифи</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Партнерам</a>
+              <a class="nav-link" href="#partners">Стати партнером</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Контакти</a>
+              <a class="nav-link" href="#contact">Контакти</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cabinet.html">Кабінет</a>
