Hradova Rosa v1.1a; added sample contacts page.

--- a/hr/cabinet.html
+++ b/hr/cabinet.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#partners">Стати партнером</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Контакти</a>
+              <a class="nav-link" href="contacts.html">Контакти</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cabinet.html">Кабінет</a>
