--- a/hr/index.html
+++ b/hr/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#partners">Стати партнером</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Контакти</a>
+              <a class="nav-link" href="contacts.html">Контакти</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cabinet.html">Кабінет</a>
@@ -87,27 +87,27 @@
             <img src="images/about_01.jpg" alt="">
             <figcaption>Людина повинна вживати тільки якісну питну воду.</figcaption>
           </figure>
-          <p>Вода дуже впливає на здоров'я і повсякденне життя людини. Для того щоб людина була здорова вона повинна вживати тільки якісну чисту питну воду.</p>
-          <p>Якісна питна вода - це очищена вода, яка не містить шкідливих домішок і сполук, небезпечних для здоров'я людини. Подібна вода повинна відповідати встановленим стандартам якості, тобто бути без запаху, осадів і абсолютно прозорою, а так само
-            вона повинна бути безпечна при тривалому вживанні.</p>
-          <p>Стрімке зростання населення в поєднанні зі стрімко зростаючими обсягами водоспоживання для різних потреб призвели до глобальної водної кризи на всій планеті, який проявляється в гострій нестачі прісної води, а так само в її стрімкому забрудненні.
+          <p>Вода дуже впливає на здоров'я і повсякденне життя людини. Для того щоб людина була здорова, вона повинна вживати тільки якісну, чисту питну воду.</p>
+          <p>Якісна питна вода - це очищена вода, яка не містить шкідливих домішок і сполук, небезпечних для здоров'я людини. Подібна вода повинна відповідати встановленим стандартам якості, тобто бути без запаху, осадів і абсолютно прозорою, а також повинна
+            бути безпечна при тривалому вживанні.</p>
+          <p>Стрімке зростання населення в поєднанні зі стрімко зростаючими обсягами водоспоживання для різних потреб призвели до глобальної водної кризи на всій планеті, яка проявляється в гострій нестачі прісної води, а також само в її стрімкому забрудненні.
             Ці фактори і привели нас до дефіциту якісної питної води.</p>
-          <p>Організм людини дуже сильно реагує на нестачу води. Адже найменше зневоднення може призвести до серйозних порушень більшості фізіологічних функцій організму. Велика втрата води призводить до виведення з організму вітамінів і мікроелементів,
+          <p>Організм людини дуже сильно реагує на нестачу води, адже найменше зневоднення може призвести до серйозних порушень більшості фізіологічних функцій організму. Велика втрата води призводить до виведення з організму вітамінів і мікроелементів,
             що так само негативно позначається на здоров'ї людини.</p>
           <figure class="image--right">
             <img src="images/about_02.jpg" alt="">
             <figcaption>Норма споживання питної води складає 1,0- 1,5 літра в зимовий період і 3,0-3,5 літра в літній період.</figcaption>
           </figure>
-          <p>Норми споживання води насправді є дуже серйозним питанням успішної життєдіяльності людини. На сьогоднішній день існують офіційно встановлені норми споживання питної води на людину на добу. Про це говоритися в Законі України «Про забезпечення
-            санітарного та епідемічного благополуччя населення» від 28 лютого 1994 У статті 18. Виходячи з різних статистичних даних в цьому законі, була прописана середня норма споживання питної води для населення, яка складає 1,0- 1,5 літра в зимовий
-            період і 3,0-3,5 літра в літній період.Прі цьому температурний режим споживання питної води коливається від + 8 ° С до + 20 ° С. Адже тільки достатня кількість якісно очищеною і корисною питної води дає людині можливість задовольнити практично
-            всі фізіологічні потреби організму.</p>
-          <p>Останнім часом ми все частіше стали замислюватися, а яку воду ми п'ємо? З водопровідного крана або бутильовану, або з численних джерел і колодязів розташованих на території області.</p>
+          <p>Норми споживання води насправді є дуже серйозним питанням успішної життєдіяльності людини. На сьогоднішній день існують офіційно встановлені норми споживання питної води людиною на добу. Про це говориться в Законі України «Про забезпечення санітарного
+            та епідемічного благополуччя населення» від 28 лютого 1994 У статті 18. Виходячи з різних статистичних даних, в цьому законі була прописана середня норма споживання питної води для населення, яка складає 1,0- 1,5 літра в зимовий період і 3,0-3,5
+            літра в літній період. При цьому температурний режим споживання питної води коливається від + 8 ° С до + 20 ° С. Достатня кількість якісно очищеної і корисної питної води дає людині можливість задовольнити практично всі фізіологічні потреби
+            організму.</p>
+          <p>Останнім часом ми все частіше стали замислюватися про те, яку воду п'ємо: з водопровідного крана або бутильовану, або з численних джерел і криниць розташованих на території області.</p>
           <p>Незважаючи на те, що водопровідна вода відповідає прийнятим санітарним нормам, вона залишається далеко не чистою. У оточуючих місто водоймах, звідки йде водопостачання, в середньому виявляють 2000 патогенних речовин і мікроорганізмів. Частина
             з них (вкрай мала) знезаражується на очисних станціях, шляхом хлорування. Хлор же сам по собі є вкрай небезпечним і отруйним елементом! Хлорована вода з крана небезпечна для здоров'я. Хоча хлор і знищує багато небезпечних мікробів, однак він
             є однією з причин виникнення атеросклерозу.</p>
           <p>Використання джерельної та колодязної води - теж не панацея. Якість її практично не підлягає контролю і особливо погіршується у весняний період танення снігів. У такій воді при лабораторному аналізі виявляються пестициди, фосфати, важкі метали.
-            Дуже висока забрудненість нітратами, їх концентрація в середньому в 2-10 разів перевищує допустимий для питних вод кількість.</p>
+            Дуже висока забрудненість нітратами, їх концентрація в середньому в 2-10 разів перевищує допустиму для питних вод кількість.</p>
           <p>На сьогоднішній день кращий спосіб отримати воду для життя -це доочищати її на місці споживання за допомогою автономних пристроїв доочищення на основі зворотнього осмосу RO.</p>
         </div>
       </div>
@@ -222,15 +222,25 @@
                 <li>Приватні особи(мешканці багатоквартирних будинків), активні люди які мають вільні кошти та бажання вести бізнес у даному сегменті послуг.</li>
               </ul>
               <br>
-              <strong>Партнери або Ділери</strong>
-              <p>Іншим словом Франчайзі, Інвестор, Агент.</p>
-              <p>Фізична особа підприємець, яка за власний кошт побудувала сигмент мережі та за договором франчайзингу здійснює його комерційну експлуатацію, технічне обслуговування мережі, проводить заходи по залученню клієнтів та реалізації карток.</p>
+              <strong>Партнери або Ділери.</strong>
+              <p>Іншим словом
+                <strong>Франчайзі.</strong>
+                <br> Фізична особа підприємець або юридична особа, яка за власний кошт побудувала сигмент мережі та за договором франчайзингу здійснює його комерційну експлуатацію, технічне обслуговування мережі, проводить заходи по залученню клієнтів та
+                реалізації карток.</p>
               <br>
-              <strong>Інвестор</strong>
-              <p>ізична особа підприємець, яка за власний чи залучений кошт побудувала сигмент мережі та за договором франчайзингу не здійснює його експлуатацію, а лише отримує відсоток винагороди від його комерційної експлуатації іншим суб'єктом господарювання.</p>
               <br>
-              <strong>Агент</strong>
-              <p>Фізична або юридична особа, яка за договором з Партнером/Ділером проводить виключно заходи по залученню клієнтів та реалізації карток.</p>
+              <p>А також:</p>
+              <ul>
+                <li>
+                  <strong>Інвестор.</strong>
+                  <p>Фізична особа підприємець або юридична особа, яка за власний чи залучений кошт побудувала сигмент мережі та не здійснює його експлуатацію та технічне обслуговування, а лише отримує відсоток винагороди від його комерційної експлуатації
+                    іншим суб'єктом господарювання.</p>
+                </li>
+                <li>
+                  <strong>Агент</strong>
+                  <p>Фізична або юридична особа, яка за договором з Партнером/Ділером проводить виключно заходи по залученню клієнтів та реалізації карток.</p>
+                </li>
+              </ul>
             </div>
           </div>
           <button class="btn btn-block btn-light text-left collapsed" type="button" data-toggle="collapse" data-target="#forPartners03" aria-expanded="false" aria-controls="forPartners03">
@@ -245,10 +255,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- end .section.about.partners -->
-    <div class="section contact-us" id="contact">
-      <div class="container">
+      <div class="container contact-us">
         <h4 class="text-center">Заробляйте разом з нами! Ми пропонуємо вам зрозумілий основний та додатковий прибуток.</h4>
         <div class="alert alert-primary text-center h5">Надішліть нам запит поштою:
           <a href="info-gr@i.ua">info-gr@i.ua</a>
@@ -285,6 +292,7 @@
         </form>
       </div>
     </div>
+    <!-- end .section.about.partners -->
     <!-- END content -->
     <footer class="main-footer">
       <div class="container"> Гардова роса&copy2018 </div>
