--- a/hr/contacts.html
+++ b/hr/contacts.html
@@ -37,28 +37,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link text-danger" href="#">Акція
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#about">Про воду</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Про воду</a>
+              <a class="nav-link" href="index.html#product">Про проект</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#product">Про проект</a>
+              <a class="nav-link" href="index.html#price">Локації та тарифи</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#price">Локації та тарифи</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#partners">Стати партнером</a>
+              <a class="nav-link" href="index.html#partners">Стати партнером</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacts.html">Контакти</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cabinet.html">Кабінет</a>
             </li>
           </ul>
         </div>
@@ -85,7 +77,7 @@
                   <table class="table table-borderless">
                     <tr>
                       <td>м. Южноукраїнськ</td>
-                      <td>(097) 123-45-67</td>
+                      <td>(067) 512-44-42</td>
                     </tr>
                     <tr>
                   </table>
@@ -103,7 +95,7 @@
                   <table class="table table-borderless">
                     <tr>
                       <td>м. Хмельницький</td>
-                      <td>(067) 123-45-67</td>
+                      <td>(067) 380-32-32</td>
                     </tr>
                     <tr>
                   </table>
@@ -112,6 +104,39 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="container contact-us">
+        <h4 class="text-center">Замовити картку.</h4>
+        <h6 class="text-center text-muted">Залиште заявку і ми зв'яжемося з Вами для уточнення деталей замовлення.</h6>
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="contactName">Ім'я</label>
+              <input type="text" class="form-control" id="contactName"> </div>
+            <div class="form-group col-md-6">
+              <label for="contactCity">Місто</label>
+              <input type="text" class="form-control" id="contactCity"> </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <div class="form-group">
+                <label for="contactPhone">Контактний телефон</label>
+                <input type="phone" class="form-control" id="contactPhone"> </div>
+              <div class="form-group">
+                <label for="contactEmail">E-mail</label>
+                <input type="email" class="form-control" id="contactEmail"> </div>
+            </div>
+            <div class="col-12 col-sm-6">
+              <div class="form-group">
+                <label for="contactMessage">Повідомлення</label>
+                <textarea class="form-control" id="contactMessage" rows="4" placeholder="Коментар до замовлення або, можливо, у вас є якісь питання..."></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="text-right">
+            <button type="submit" class="btn btn-primary">Надіслати заявку</button>
+          </div>
+        </form>
       </div>
     </div>
     <!-- end .section.about.price.contacts -->
