--- a/hr/registration.html
+++ b/hr/registration.html
@@ -37,28 +37,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link text-danger" href="#">Акція
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#about">Про воду</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Про воду</a>
+              <a class="nav-link" href="index.html#product">Про проект</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#product">Про проект</a>
+              <a class="nav-link" href="index.html#price">Локації та тарифи</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#price">Локації та тарифи</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#partners">Стати партнером</a>
+              <a class="nav-link" href="index.html#partners">Стати партнером</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacts.html">Контакти</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cabinet.html">Кабінет</a>
             </li>
           </ul>
         </div>
